# product_watch

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  test-curl.sh
docs/: api.md  architecture.md  database.md  jwt-auth.md  visit-tracking.md
src/: manage.py
src/auth/: api.py  apps.py  dependencies.py  jwt.py  models.py  schemas.py  service.py
src/auth/migrations/: 0001_initial.py
src/core/: api.py
src/notifications/: service.py  tasks.py
src/notifications/templates/emails/: product_created.html  product_updated.html
src/product_watch/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/products/: api.py  models.py  schemas.py  service.py
src/products/migrations/: 0001_initial.py
src/tests/: conftest.py  test_auth.py  test_products.py  test_visits.py
src/visits/: __init__.py  api.py  middleware.py  models.py  schemas.py  service.py
src/visits/migrations/: 0001_initial.py
